--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ flask = "^3.0.2"
 requests = "^2.31.0"
 httpx = "^0.26.0"
 fastapi = "^0.109.2"
+uvicorn = "^0.27.1"
+pydantic = "^2.6.1"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
